# Glyph

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/glyph-asr-sidecar/: Cargo.toml
crates/glyph-asr-sidecar/src/: main.rs
crates/glyph-core/: Cargo.toml
crates/glyph-core/examples/: clean_text.rs  transcribe_wav.rs
crates/glyph-core/src/: asr.rs  cleaner.rs  history.rs  lib.rs  proc_guard.rs  text.rs
crates/glyph-daemon/: Cargo.toml
crates/glyph-daemon/src/: audio.rs  backends.rs  config.rs  engine.rs  hotkey.rs  inject.rs  lib.rs  llama.rs  main.rs
crates/glyph-whisper-sidecar/: Cargo.toml
crates/glyph-whisper-sidecar/src/: main.rs
glyph-app/: package-lock.json  package.json
glyph-app/scripts/: export-icons.mjs  prepare-sidecars.mjs
glyph-app/src/: app.html
glyph-app/src-tauri/: Cargo.toml  tauri.conf.json
glyph-app/src-tauri/capabilities/: default.json
glyph-app/src-tauri/icons/: icon.icns
glyph-app/src-tauri/src/: lib.rs  main.rs
glyph-app/src/lib/components/: BackendItem.svelte  Field.svelte  HistoryEntry.svelte  HotkeyCapture.svelte  ModelCustom.svelte  ModelSearch.svelte  ModelSection.svelte  SegmentedControl.svelte  StatusBadge.svelte  Switch.svelte  TranscriptionPicker.svelte
glyph-app/src/routes/: +layout.svelte  +layout.ts  +page.svelte
glyph-app/src/routes/hud/: +page.svelte
