[package]
name = "glyph-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
ureq = { version = "2", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
hound = "3"
