[package]
name = "glyph-daemon"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
glyph-core = { path = "../glyph-core" }
anyhow.workspace = true
serde = { workspace = true }
serde_json.workspace = true
toml = "0.8"
cpal = "0.15"
rubato = "0.15"
arboard = "3"
ureq = { version = "2", features = ["json"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
]
